--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
+<body class="bg-white">
     <!-- Header -->
     <header class="bg-blue-600 text-white p-4 shadow-lg">
         <div class="flex justify-between items-center">
