--- a/test-preview.html
+++ b/test-preview.html
@@ -49,7 +49,8 @@
         </div>
         
         <h2>Test Links:</h2>
-        <a href="http://localhost:8000/index.html" class="test-link" target="_blank">
+        <a href="
+        http://localhost:8000/index.html" class="test-link" target="_blank">
             Test Main POS System
         </a>
         
